--- a/Pages/Podcast.html
+++ b/Pages/Podcast.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poadcast</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Img/Logo-de-Camelia.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./../style/style.css">
 </head>
@@ -15,16 +16,46 @@
         </div>
 
         <!--Lista no ordenada-->
-        <nav>
+        <!-- <nav>
             <ul class="menu">
                 <li><a class="subrayado" href="../index.html">Inicio</a></li>
                 <li><a class="subrayado" href="../Pages/Productos.html">Productos</a></li>
                 <li><a class="subrayado" href="../Pages/Podcast.html">Poadcast</a></li>
                 <li><a class="subrayado" href="../Pages/Noticias.html">Noticias</a></li>   
                 <li><a class="subrayado" href="../Pages/Contacto.html">Contacto</a></li>
-                <!-- <li><a class="subrayado" href="#pie">Ir al pie de página</a></li> -->
+                <li><a class="subrayado" href="#pie">Ir al pie de página</a></li>
             </ul>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="../index.html">Camelia inicio</a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../Pages/Productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../Pages/Podcast.html">Podcast</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../Pages/Noticias.html">Noticias</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../Pages/Contacto.html">Contacto</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
         </nav>
+        
         <form action="">
             <div class="banner">
             <h1>Espacio de relajación</h1>
@@ -58,5 +89,6 @@
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
