tercera-pre-entrega

--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
+    <meta name="description" content="Aqui podras ver todas las noticias de nuestras actividades">
+    <meta name="keywords" content="actividades, noticias, encuentros, bienestar, salud">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../Img/Logo-de-Camelia.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./../style/style.css">
+    <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./../style/estilo.css">
 </head>
 <body class="body">
     <header>
         <div class="titulo">
-            <img class="imagendelogo" src="../Img/Logo-de-Camelia.jpg" alt="Camelia logo" width="250px">
+            <img class="imagendelogo" src="../Img/logo-de-camelia.jpg" alt="Camelia logo" width="250px">
         </div>
 
         <!--Lista no ordenada-->
@@ -56,8 +59,8 @@
         <section class="info">
             <div>
                 <h2 class="Subtitulo">Encuentro mensual de yoga</h2>
-                <p class="Notinfo">Mensualmente realizamos encuentros para realizar yoga con la profesora Brenda Medina, aquí compartimos información, noticias y te invitamos a que participes.</p>
-                <p class="Notinfo">Esto fué lo que realizamos en nuestro último encuentro en la chacra de retiro Esperanza.</p>
+                <p>Mensualmente realizamos encuentros para realizar yoga con la profesora Brenda Medina, aquí compartimos información, noticias y te invitamos a que participes.</p>
+                <p>Esto fué lo que realizamos en nuestro último encuentro en la chacra de retiro Esperanza.</p>
             </div>
             <div class="videopodcast">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNKmUFRuozA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -66,7 +69,7 @@
     </main>
     
     <section class="info">
-        <div">
+        <div>
             <p>Si quieres unirte a nuestro próximo encuentro de yoga que se realizará en el mes de Agosto en Punta del este te invitamos a que te comuniques con nosotros llenando este formulario.</p>
         </div>
 
@@ -126,23 +129,14 @@
     </section>
 
     <a class="volver" href="#">Volver arriba</a>
-    <hr>
+    
     <footer id="pie">
         <div class="redes">
-            <a class="subrayado" href="">
-            Facebook
-            </a>
-            <a class="subrayado" href="https://www.instagram.com/camel.ias/">
-            Instagram
-            </a>
-            <a class="subrayado" href="">
-            Whatsapp
-            </a>
-            <a class="subrayado" href="">
-            Compartir
-            </a>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-whatsapp"></i>
         </div>
-    </footer>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
