--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <meta name="description" content="Por más información comunicate con nosotros">
+    <meta name="keywords" content="Comunicate con nosotros, inofrmacion de contacto, consultas, preguntas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../Img/Logo-de-Camelia.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./../style/style.css">
+    <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./../style/estilo.css">
 </head>
 
 <body class="body">
     <header>
         <div class="titulo">
-            <img class="imagendelogo" src="../Img/Logo-de-Camelia.jpg" alt="Camelia logo" width="250px">
+            <img class="imagendelogo" src="../Img/logo-de-camelia.jpg" alt="Camelia logo" width="250px">
         </div>
 
         <!--Lista no ordenada-->
@@ -56,17 +59,17 @@
     <section class="info-contacto">
         <div class="atencion">
             <div class="horario">
-                <h2>Nuestro horario de atención</h2>
+                <h2 class="Subtitulo">Nuestro horario de atención</h2>
                 <p class="p">Lunes a Viernes de 8:00 a 21:00</p>
                 <p class="p">Sábados y Domingos de 9:00 a 19:00</p>
             </div>
 
             <div class="comunicate">
-                <h2>Comunicate con nosotros</h2>
+                <h2 class="Subtitulo">Comunicate con nosotros</h2>
                 <p class="p">Si tenes dudas y queres consultarnos algo podés comunicarte con nosotros a través de nuestro Whatsapp o en nuestras redes sociales, atendemos las 24 horas. 
                 También tenemos nuestro local donde podrás visitarnos y  probar nuestros productos.</p>
                 <div class="map-responsive">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26829.449227417015!2d-56.53986368862295!3d-32.80071259040455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a641a12ab6dad1%3A0x65830ef559dd1924!2s45100%20Paso%20de%20los%20Toros%2C%20Departamento%20de%20Tacuaremb%C3%B3!5e0!3m2!1ses-419!2suy!4v1690053730395!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26829.449227417015!2d-56.53986368862295!3d-32.80071259040455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a641a12ab6dad1%3A0x65830ef559dd1924!2s45100%20Paso%20de%20los%20Toros%2C%20Departamento%20de%20Tacuaremb%C3%B3!5e0!3m2!1ses-419!2suy!4v1690053730395!5m2!1ses-419!2suy" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 
             </div>
@@ -77,7 +80,7 @@
             <h2 class="contactanos">Información de contacto</h2>
             <p class="p"><strong>Teléfono:</strong> +598123568</p>
             <p class="p"><strong>E-mail:</strong> Camelias@gmail.com</p>
-            <p class="p"><strong>Dirección:</strong> Correa esquina Saravia 1234, ciudad de Libertad, departamento de Tacuarembó, Uruguay.</p>
+            <p class="p"><strong>Dirección:</strong> Correa esquina Saravia 1234, ciudad de Paso de los Toros, departamento de Tacuarembó, Uruguay.</p>
         </div>  
 
         <div class="container">
@@ -137,24 +140,13 @@
 
     <a class="volver" href="#">Volver arriba</a>
 
-    <hr>
-
     <footer id="pie">
         <div class="redes">
-            <a class="subrayado" href="">
-            Facebook
-            </a>
-            <a class="subrayado" href="https://www.instagram.com/camel.ias/">
-            Instagram
-            </a>
-            <a class="subrayado" href="">
-            Whatsapp
-            </a>
-            <a class="subrayado" href="">
-            Compartir
-            </a>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-whatsapp"></i>
         </div>
-    </footer>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
