--- a/Pages/Podcast.html
+++ b/Pages/Podcast.html
@@ -4,29 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poadcast</title>
+    <meta name="description" content="Aquí podas ver videos con meditaciones guiadas">
+    <meta name="keywords" content="Meditación, yoga, relajación, buen descanso">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../Img/Logo-de-Camelia.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./../style/style.css">
+    <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./../style/estilo.css">
 </head>
 
 <body class="body">
     <header>
         <div class="titulo">
-            <img class="imagendelogo" src="../Img/Logo-de-Camelia.jpg" alt="Camelia logo" width="250px">
+            <img class="imagendelogo" src="../Img/logo-de-camelia.jpg" alt="Camelia logo" width="250px">
         </div>
-
-        <!--Lista no ordenada-->
-        <!-- <nav>
-            <ul class="menu">
-                <li><a class="subrayado" href="../index.html">Inicio</a></li>
-                <li><a class="subrayado" href="../Pages/Productos.html">Productos</a></li>
-                <li><a class="subrayado" href="../Pages/Podcast.html">Poadcast</a></li>
-                <li><a class="subrayado" href="../Pages/Noticias.html">Noticias</a></li>   
-                <li><a class="subrayado" href="../Pages/Contacto.html">Contacto</a></li>
-                <li><a class="subrayado" href="#pie">Ir al pie de página</a></li>
-            </ul>
-        </nav> -->
-
+        
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,24 +61,13 @@
         </div>
     </section>
     <a class="volver" href="#">Volver arriba</a>
-    <br>
-    <br>
-    <hr>
+    
     <footer id="pie">
-        <div class="redes">
-            <a class="subrayado" href="">
-            Facebook
-            </a>
-            <a class="subrayado" href="https://www.instagram.com/camel.ias/">
-            Instagram
-            </a>
-            <a class="subrayado" href="">
-            Whatsapp
-            </a>
-            <a class="subrayado" href="">
-            Compartir
-            </a>
-        </div>
+      <div class="redes">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
