arreglo de media queries

--- a/Pages/Productos.html
+++ b/Pages/Productos.html
@@ -12,6 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./../style/estilo.css">
 </head>
+
 <body class="body">
     <header>
         <div class="titulo">
@@ -48,7 +49,7 @@
             </nav>
     
         <form action="">
-            <div class="banner">
+            <div class="banner" data-aos="fade-down">
             <h1>Nuestos productos</h1>
             </div>
         </form>
