--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./../style/estilo.css">
 </head>
 <body class="body">
@@ -49,7 +50,7 @@
         </nav>
 
         <form action="">
-            <div class="banner">
+            <div class="banner" data-aos="fade-down">
             <h1>Noticias</h1>
             </div>
         </form>
@@ -62,7 +63,7 @@
                 <p>Mensualmente realizamos encuentros para realizar yoga con la profesora Brenda Medina, aquí compartimos información, noticias y te invitamos a que participes.</p>
                 <p>Esto fué lo que realizamos en nuestro último encuentro en la chacra de retiro Esperanza.</p>
             </div>
-            <div class="videopodcast">
+            <div class="videopodcast" data-aos="flip-left">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNKmUFRuozA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -138,5 +139,9 @@
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
