--- a/Pages/Podcast.html
+++ b/Pages/Podcast.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./../style/estilo.css">
 </head>
 
@@ -48,7 +49,7 @@
         </nav>
         
         <form action="">
-            <div class="banner">
+            <div class="banner" data-aos="fade-down">
             <h1>Espacio de relajación</h1>
             </div>
         </form>
@@ -56,7 +57,7 @@
 
     <section>
         <h2 class="Subtitulo">Videos de meditación guiada para calmar la mente</h2>
-        <div class="videopodcast">
+        <div class="videopodcast" data-aos="flip-left">
             <iframe width="700" height="400" src="https://www.youtube.com/embed/VZrUfADraX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
@@ -70,5 +71,9 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
