--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="./Img/logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/estilo.css">  
   </head>
 
@@ -50,7 +51,7 @@
       </nav>
       
       <form action="">
-        <div class="banner">
+        <div class="banner" data-aos="fade-down">
         <h1>Camelia</h1>
         </div>
       </form>
@@ -59,7 +60,7 @@
     <main>
       <section class="info">
         <h3 class="subtitulo-info">Sobre nosotros</h3>
-        <div class="cajita">
+        <div class="cajita" data-aos="fade-right">
           <img class= "img_inicio" src="./Img/sobre-nosotras.jpg" alt="Sobre nosotras" title="Sobre nosotras" width="35%">
           <div class="parrafos">
             <p>Somos jóvenes emprededoras, amantes de la naturaleza, el bienestar y el equilibrio. ¿Sabés cómo surgió Camelia? Un día con mi amiga comenzamos a charlar de "la vida en general" en un mundo tan ajetreado donde a veces nos resulta difícil desconectarnos de la ciudad, el estrés, el cansancio y el agobio, comenzamos a recordar nuestra infancia, cuando no teníamos tantas responsabilidades y lo único que nos hacía feliz era conectarnos con la naturaleza explorando nuestro jardín conociendo nuevos aromas y colores, por eso buscamos una forma de llevar la naturaleza a nuestro hogar y aquí surguió la idea de crear Camelia, recordando esos aromas de las plantas y flores del jardín de nuestra infancia a través de los inciensos, aceites y cremas. 
@@ -69,7 +70,7 @@
 
         <h3 class="subtitulo-info">Nuevos productos</h3>
 
-        <div class="cajita">
+        <div class="cajita" data-aos="fade-right">
           <img class= "img_inicio" src="./Img/nuevos-productos.jpg" alt="Nuevos productos" title="Nuevos productos" width="35%">
           <div class="parrafos">
             <p>Ingresa aquí para ver los nuevos productos. Llegaron humidificadores, fuentes de humo, perfumadores textil, sahumadores, cuencos y porta inciensos.</p>
@@ -78,7 +79,7 @@
 
         <h3 class="subtitulo-info">Relajación</h3>
 
-        <div class="cajita">
+        <div class="cajita" data-aos="fade-right">
           <img class= "img_inicio" src="./Img/relajacion.jpg" alt="Relajacion" title="Relajacion" width="55%">
           <div class="parrafos">
             <p>Como dijimos anteriormente, nos gusta el equilibrio y el bienestar, entonces decidimos crear este espacio para relajarnos un poco.
@@ -102,5 +103,9 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
   </body>
 </html>
