--- a/Pages/Productos.html
+++ b/Pages/Productos.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Productos de aromaterapia">
     <meta name="keywords" content="Velas, inciensos, aceites escenciales, bienestar, salud, armonia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../Img/logo-de-camelia.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Img/Logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./../style/estilo.css">
@@ -16,7 +16,7 @@
 <body class="body">
     <header>
         <div class="titulo">
-            <img class="imagendelogo" src="../Img/logo-de-camelia.jpg" alt="Camelia logo" width="250px">
+            <img class="imagendelogo" src="../Img/Logo-de-camelia.jpg" alt="Camelia logo" width="250px">
         </div>
         
         <nav class="navbar navbar-expand-lg bg-light">
@@ -59,27 +59,27 @@
         <div class="productos">
             <div class="producto1" data-aos="fade-right">
                 <h2>Velas de colores</h2>
-            <img class="producto" src="../Img/velas-de-colores.jpeg" alt="Velas de colores" title="Velas de colores camelia" width="220px">
+            <img class="producto" src="../Img/Velas-de-colores.jpeg" alt="Velas de colores" title="Velas de colores camelia" width="220px">
             </div>
             <div class="producto2" data-aos="fade-down">
                 <h2>Velas de miel</h2>
-            <img class="producto" src="../Img/velas-de-miel.jpg" alt="Velas de miel" title="Velas de miel camelia" width="235px">
+            <img class="producto" src="../Img/Velas-de-miel.jpg" alt="Velas de miel" title="Velas de miel camelia" width="235px">
             </div>
             <div class="producto3" data-aos="fade-left">
                 <h2>Velas para hornitos</h2>
-            <img class="producto" src="../Img/velas-para-hornitos.jpg" alt="Velas para hornitos" title="Velas para hornitos camelia" width="220px">
+            <img class="producto" src="../Img/Velas-para-hornitos.jpg" alt="Velas para hornitos" title="Velas para hornitos camelia" width="220px">
             </div>
             <div class="producto4" data-aos="fade-right">
                 <h2>Inciensos</h2>
-            <img class="producto" src="../Img/inciensos.jpg" alt="Inciensos" title="Inciensos camelia" width="215px">    
+            <img class="producto" src="../Img/Inciensos.jpg" alt="Inciensos" title="Inciensos camelia" width="215px">    
             </div>
             <div class="producto5" data-aos="fade-down">
                 <h2>Perlas</h2>
-            <img class="producto" src="../Img/perlas.jpg" alt="Perlas" title="Perlas camelia" width="250px">
+            <img class="producto" src="../Img/Perlas.jpg" alt="Perlas" title="Perlas camelia" width="250px">
             </div>
             <div class="producto6" data-aos="fade-left">
                 <h2>Resinas</h2>
-            <img class="producto" src="../Img/resinas.jpg" alt="Resinas" title="Resinas camelia" width="250px">
+            <img class="producto" src="../Img/Resinas.jpg" alt="Resinas" title="Resinas camelia" width="250px">
             </div>
             <div class="producto7" data-aos="fade-right">
                 <h2>Palo santo</h2>
@@ -87,23 +87,23 @@
             </div>
             <div class="producto8" data-aos="fade-down">
                 <h2>Aceites escenciales</h2>
-            <img class="producto" src="../Img/aceites-esenciales.jpg" alt="Aceites esenciales" title="Aceites esenciales camelia" width="235px">
+            <img class="producto" src="../Img/Aceites-esenciales.jpg" alt="Aceites esenciales" title="Aceites esenciales camelia" width="235px">
             </div>
             <div class="producto9" data-aos="fade-left">
                 <h2>Carbón</h2>
-            <img class="producto" src="../Img/carbones.jpg" alt="carbones" title="Carbones camelia" width="240px">
+            <img class="producto" src="../Img/Carbones.jpg" alt="carbones" title="Carbones camelia" width="240px">
             </div>
             <div class="producto10" data-aos="fade-right">
                 <h2>Hornitos</h2>
-            <img class="producto" src="../Img/hornitos.jpg" alt="Hornitos" title="Hornitos camelia" width="240px">
+            <img class="producto" src="../Img/Hornitos.jpg" alt="Hornitos" title="Hornitos camelia" width="240px">
             </div>
             <div class="producto11" data-aos="fade-down">
                 <h2>Elefantes</h2>
-            <img class="producto" src="../Img/elefante.jpg" alt="Elefantes" title="Elefantes camelia" width="250px">
+            <img class="producto" src="../Img/Elefante.jpg" alt="Elefantes" title="Elefantes camelia" width="250px">
             </div>
             <div class="producto12" data-aos="fade-left">
                 <h2>Budas</h2>
-            <img class="producto" src="../Img/budas.jpg" alt="Budas" title="Budas camelia" width="250px">
+            <img class="producto" src="../Img/Budas.jpg" alt="Budas" title="Budas camelia" width="250px">
             </div>
             
         </div>
