--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Camelia es una tienda holística para tu bienestar">
     <meta name="keywords" content="Aromaterapia, inciensos, aceites en Tacuarembo, Uruguay natural">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./Img/logo-de-camelia.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./Img/Logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/estilo.css">  
@@ -16,7 +16,7 @@
   <body class="body">
     <header>
       <div class="titulo">
-      <img class="imagendelogo" src="./Img/logo-de-camelia.jpg" alt="Camelia logo">
+      <img class="imagendelogo" src="./Img/Logo-de-camelia.jpg" alt="Camelia logo">
       </div>
     
       <!--Lista no ordenada-->
@@ -61,7 +61,7 @@
       <section class="info">
         <h3 class="subtitulo-info">Sobre nosotros</h3>
         <div class="cajita" data-aos="fade-right">
-          <img class= "img_inicio" src="./Img/sobre-nosotras.jpg" alt="Sobre nosotras" title="Sobre nosotras" width="35%">
+          <img class= "img_inicio" src="./Img/Sobre-nosotras.jpg" alt="Sobre nosotras" title="Sobre nosotras" width="35%">
           <div class="parrafos">
             <p>Somos jóvenes emprededoras, amantes de la naturaleza, el bienestar y el equilibrio. ¿Sabés cómo surgió Camelia? Un día con mi amiga comenzamos a charlar de "la vida en general" en un mundo tan ajetreado donde a veces nos resulta difícil desconectarnos de la ciudad, el estrés, el cansancio y el agobio, comenzamos a recordar nuestra infancia, cuando no teníamos tantas responsabilidades y lo único que nos hacía feliz era conectarnos con la naturaleza explorando nuestro jardín conociendo nuevos aromas y colores, por eso buscamos una forma de llevar la naturaleza a nuestro hogar y aquí surguió la idea de crear Camelia, recordando esos aromas de las plantas y flores del jardín de nuestra infancia a través de los inciensos, aceites y cremas. 
             Ofrecemos productos de excelente calidad de distintas variedades como aceites escenciales anti-strés, para el buen descanso, florales y aromatizantes, cremas relajantes y descontracturantes, inciensos de resina y naturales, velas y adornos para el hogar.</p>
@@ -71,7 +71,7 @@
         <h3 class="subtitulo-info">Nuevos productos</h3>
 
         <div class="cajita" data-aos="fade-right">
-          <img class= "img_inicio" src="./Img/nuevos-productos.jpg" alt="Nuevos productos" title="Nuevos productos" width="35%">
+          <img class= "img_inicio" src="./Img/Nuevos-productos.jpg" alt="Nuevos productos" title="Nuevos productos" width="35%">
           <div class="parrafos">
             <p>Ingresa aquí para ver los nuevos productos. Llegaron humidificadores, fuentes de humo, perfumadores textil, sahumadores, cuencos y porta inciensos.</p>
           </div>
@@ -80,7 +80,7 @@
         <h3 class="subtitulo-info">Relajación</h3>
 
         <div class="cajita" data-aos="fade-right">
-          <img class= "img_inicio" src="./Img/relajacion.jpg" alt="Relajacion" title="Relajacion" width="55%">
+          <img class= "img_inicio" src="./Img/Relajacion.jpg" alt="Relajacion" title="Relajacion" width="55%">
           <div class="parrafos">
             <p>Como dijimos anteriormente, nos gusta el equilibrio y el bienestar, entonces decidimos crear este espacio para relajarnos un poco.
             En la sección de podcast y noticias compartimos videos y recomendaciones para ayudar con nuestro bienestar.</p>
