--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Camelia es una tienda holística para tu bienestar">
     <meta name="keywords" content="Aromaterapia, inciensos, aceites en Tacuarembo, Uruguay natural">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./Img/logo-de-camelia.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./Img/Logo-de-camelia.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7629c2d9f5.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/estilo.css">  
@@ -16,7 +16,7 @@
   <body class="body">
     <header>
       <div class="titulo">
-      <img class="imagendelogo" src="./Img/logo-de-camelia.jpg" alt="Camelia logo">
+      <img class="imagendelogo" src="./Img/Logo-de-camelia.jpg" alt="Camelia logo">
       </div>
     
       <!--Lista no ordenada-->
